Spacing issues #174304577

--- a/app/assets/stylesheets/plan.scss
+++ b/app/assets/stylesheets/plan.scss
@@ -49,6 +49,10 @@
   }
 }
 
+.action-list-component {
+  margin-top: 30px;
+}
+
 .technical-area-container {
   h3 {
     font-family: Karla, sans-serif;
